RESOLVED FIXED306556
-viewDidChangeEffectiveAppearance definition should not live in WKWebViewTestingMac.mm
https://bugs.webkit.org/show_bug.cgi?id=306556
Summary -viewDidChangeEffectiveAppearance definition should not live in WKWebViewTest...
Abrar Rahman Protyasha
Reported 2026-01-29 11:18:32 PST
Given that source file is purely for test support.
Attachments
Radar WebKit Bug Importer
Comment 1 2026-01-29 11:18:39 PST
Abrar Rahman Protyasha
Comment 2 2026-01-29 11:23:01 PST
EWS
Comment 3 2026-01-29 14:25:37 PST
Committed 306444@main (eecec0e1dbc3): <https://commits.webkit.org/306444@main> Reviewed commits have been landed. Closing PR #57499 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.