-viewDidChangeEffectiveAppearance definition should not live in WKWebViewTestingMac.mm https://bugs.webkit.org/show_bug.cgi?id=306556 rdar://169199420

Reviewed by Wenson Hsieh and Tim Horton.

WKWebViewTestingMac.mm is purely for testing support on WKWebView. Given
-viewDidChangeEffectiveAppearance is not that, this patch moves it to
WKWebViewMac.mm instead.

No new tests since there is no behavior change introduced in this patch.

* Source/WebKit/UIProcess/API/mac/WKWebViewMac.mm:
(-[WKWebView viewDidChangeEffectiveAppearance]):
* Source/WebKit/UIProcess/API/mac/WKWebViewTestingMac.mm:
(-[WKWebView viewDidChangeEffectiveAppearance]): Deleted.

Canonical link: https://commits.webkit.org/306444@main